primitives/api/test/tests/ui/missing_versioned_method.stderr
error[E0046]: not all trait items implemented, missing: `test3`
  --> tests/ui/missing_versioned_method.rs:17:2
   |
11 |         fn test3();
   |         ----------- `test3` from trait
...
17 |     impl self::Api<Block> for Runtime {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `test3` in implementation
